--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ select.input-lg { height: 46px; line-height: 46px; }
 
 hr { -moz-border-bottom-colors: none; -moz-border-image: none; -moz-border-left-colors: none; -moz-border-right-colors: none; -moz-border-top-colors: none; border-color: #EEEEEE -moz-use-text-color #FFFFFF; border-style: solid none; border-width: 1px 0; margin: 18px 0; }
 
+.disclaimer {
+  font-size: 9pt;
+}
 .btn-default {
 color: #333;
 background-color: #fff;
