--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ button, html input[type=button], input[type=reset], input[type=submit] { -webkit
 
 btn.a:visited { color: #fff; }
 
-.alert { padding: 15px; margin-bottom: 20px; border: 1px solid transparent; border-radius: 4px; }
+.alert { padding: 15px; margin-bottom: 20px; margin-top: 20px; border: 1px solid transparent; border-radius: 4px; }
 
 .alert-info { color: #303030; background-color: #f5f5f5; background: rgba(245, 245, 245, 0.4); border-color: #ccc; }
 
