Expose solicitation status on solicitation page.

--- a/style.css
+++ b/style.css
@@ -128,6 +128,15 @@ btn.a:visited { color: #fff; }
 
 .alert-info { color: #303030; background-color: #f5f5f5; background: rgba(245, 245, 245, 0.4); border-color: #ccc; }
 
+.label-warning { background-color: #f0ad4e; }
+.label-success { background-color: #5cb85c; }
+.label-primary { background-color: #428bca; }
+.label-info { background-color: #5bc0de; }
+.label-danger { background-color: #d9534f; }
+.label-default { background-color: #777; }
+
+.label { display: inline; padding: .2em .6em .3em; font-size: 90%; font-weight: 600; line-height: 1; color: #fff; text-align: center; white-space: nowrap; vertical-align: baseline; border-radius: .25em; }
+
 /** Site header */
 .site-header { border-top: 5px solid #000066; border-bottom: 1px solid #e8e8e8; min-height: 56px; background: #000d51; /* Fall-back for browsers that don't support rgba */ position: relative; }
 
