--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ btn.a:visited { color: #fff; }
 
 .alert-info { color: #303030; background-color: #f5f5f5; background: rgba(245, 245, 245, 0.4); border-color: #ccc; }
 
+.alert-warning {
+color: #8a6d3b;
+background-color: #fcf8e3;
+border-color: #faebcc;
+}
+
 .label-warning { background-color: #f0ad4e; }
 .label-success { background-color: #5cb85c; }
 .label-primary { background-color: #428bca; }
